--- a/Site funcional/API-projeto-site/public/feed.html
+++ b/Site funcional/API-projeto-site/public/feed.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/feed.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <title>Comunidade</title>
@@ -12,21 +13,21 @@
 
     <div class="container">
         <header class="cabecalho">
-                <img src="./Img/logo-2.png" alt="Logo">
-                <p>Bem vindo, xxxxx</p>
-                <h4>Menu</h4>
-                <nav class="menu">
-                    <ul>
-                        <li><a href="./feed.html"><i class="fas fa-home"></i>Feed</a></li>
-                        <li><a href="./comunidade.html"><i class="fas fa-users"></i>Comunidades</a></li>
-                        <li><a href="./rankings.html"><i class="fas fa-trophy"></i>Rankings</a></li>
-                    </ul>
-                    <ul>
-                        <li><a href=""><i class="fas fa-sign-out-alt"></i>Sair</a></li>
-                    </ul>
-                </nav>
-                <a href="./suporte.html">Fale conosco</a>
-        </header>
+            <img src="./Img/logo-2.png" alt="Logo">
+            <p>Bem vindo, xxxxx</p>
+            <h4>Menu</h4>
+            <nav class="menu">
+                <ul>
+                    <li><a href="./feed.html"><i class="fas fa-home"></i>Feed</a></li>
+                    <li><a href="./comunidade.html"><i class="fas fa-users"></i>Comunidades</a></li>
+                    <li><a href="./rankings.html"><i class="fas fa-trophy"></i>Rankings</a></li>
+                </ul>
+                <ul>
+                    <li><a href=""><i class="fas fa-sign-out-alt"></i>Sair</a></li>
+                </ul>
+            </nav>
+            <a href="./suporte.html">Fale conosco</a>
+    </header>
 
         <section class="feed">
             <form class="criar-post">
@@ -56,13 +57,5 @@
 
     </div>
 
-    <!--
-    <footer>
-        <div class="rodape">
-            <p>© 2021 OLSI. Todos os direitos reservados.</p>
-            <img src="./Img/Logo.png" alt="Logo">
-        </div>
-    </footer>
-    -->
 </body>
 </html>
