--- a/Site funcional/API-projeto-site/public/suporte.html
+++ b/Site funcional/API-projeto-site/public/suporte.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/suporte.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <title>Comunidade</title>
@@ -48,14 +49,5 @@
         </section>
 
     </div>
-
-    <!--
-    <footer>
-        <div class="rodape">
-            <p>© 2021 OLSI. Todos os direitos reservados.</p>
-            <img src="./Img/Logo.png" alt="Logo">
-        </div>
-    </footer>
-    -->
 </body>
 </html>
