--- a/Site funcional/API-projeto-site/public/comunidade.html
+++ b/Site funcional/API-projeto-site/public/comunidade.html
@@ -23,10 +23,10 @@
                         <li><a href="./rankings.html"><i class="fas fa-trophy"></i>Rankings</a></li>
                     </ul>
                     <ul>
-                        <li><a href=""><i class="fas fa-sign-out-alt"></i>Sair</a></li>
+                        <li><a href="#" onclick="logoff()"><i class="fas fa-sign-out-alt"></i>Sair</a></li>
                     </ul>
                 </nav>
-                <a href="./suporte.html">Fale conosco</a>
+                <span class="span-suporte"><a href="./suporte.html">SUPORTE</a></span>
         </header>
 
         <section class="comunidades">
@@ -34,8 +34,7 @@
                 <div class="box">
                     <div class="content">
                         <h3>Filmes</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <a href="./filmes.html">Read more</a>
+                        <a href="./filmes.html">Ver títulos</a>
                     </div>
                 </div>
             </div>
@@ -43,8 +42,7 @@
                 <div class="box">
                     <div class="content">
                         <h3>Séries</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <a href="./series.html">Read more</a>
+                        <a href="./series.html">Ver títulos</a>
                     </div>
                 </div>
             </div>
@@ -52,8 +50,7 @@
                 <div class="box">
                     <div class="content">
                         <h3>Doramas</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <a href="./doramas.html">Read more</a>
+                        <a href="./doramas.html">Ver títulos</a>
                     </div>
                 </div>
             </div>
@@ -61,8 +58,7 @@
                 <div class="box">
                     <div class="content">
                         <h3>Animes</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <a href="./animes.html">Read more</a>
+                        <a href="./animes.html">Ver títulos</a>
                     </div>
                 </div>
             </div>
