--- a/Site funcional/API-projeto-site/public/feed.html
+++ b/Site funcional/API-projeto-site/public/feed.html
@@ -23,10 +23,10 @@
                     <li><a href="./rankings.html"><i class="fas fa-trophy"></i>Rankings</a></li>
                 </ul>
                 <ul>
-                    <li><a href=""><i class="fas fa-sign-out-alt"></i>Sair</a></li>
+                    <li><a href="#" onclick="logoff()"><i class="fas fa-sign-out-alt"></i>Sair</a></li>
                 </ul>
             </nav>
-            <a href="./suporte.html">Fale conosco</a>
+            <span class="span-suporte"><a href="./suporte.html">SUPORTE</a></span>
     </header>
 
         <section class="feed">
