--- a/Site funcional/API-projeto-site/public/suporte.html
+++ b/Site funcional/API-projeto-site/public/suporte.html
@@ -23,14 +23,14 @@
                         <li><a href="./rankings.html"><i class="fas fa-trophy"></i>Rankings</a></li>
                     </ul>
                     <ul>
-                        <li><a href=""><i class="fas fa-sign-out-alt"></i>Sair</a></li>
+                        <li><a href="#" onclick="logoff()"><i class="fas fa-sign-out-alt"></i>Sair</a></li>
                     </ul>
                 </nav>
-                <a href="./suporte.html">Fale conosco</a>
+                <span class="span-suporte"><a href="./suporte.html">SUPORTE</a></span>
         </header>
 
         <section class="suporte">
-            <form action="cadastrarChamado" class="chamado">
+            <form class="chamado" id="form_cadastro_chamado" method="post" onsubmit="return cadastrarChamado()">
                 <div class="grid">
                     <h3>Ocorrência</h3>
                     <div class="chamado-input">
@@ -51,3 +51,29 @@
     </div>
 </body>
 </html>
+
+<script>
+
+    function cadastrarChamado() {
+        var formulario = new URLSearchParams(new FormData(form_cadastro_chamado));
+        fetch("/usuarios/cadastrar_chamado", {
+            method: "POST",
+            body: formulario
+        }).then(function (response) {
+            
+            if (response.ok) {
+
+                window.location.href='index.html';
+
+            } else {
+                console.log('Erro de cadastro!');
+                response.text().then(function (resposta) {
+                    div_erro.innerHTML = resposta;
+                });
+            }
+        });
+
+        return false;
+    }
+    
+</script>
