--- a/Site funcional/API-projeto-site/public/rankings.html
+++ b/Site funcional/API-projeto-site/public/rankings.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/titulos.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <script type="text/javascript" src="funcoes.js"></script>
     <title>Comunidade</title>
 </head>
 <body>
@@ -14,7 +15,7 @@
     <div class="container">
         <header class="cabecalho">
                 <img src="./Img/logo-2.png" alt="Logo">
-                <p>Bem vindo, xxxxx</p>
+                <p>Bem vindo, <span id="troca_nome">xxx</span></p>
                 <h4>Menu</h4>
                 <nav class="menu">
                     <ul>
