Incluindo listagem de chamados

--- a/Site funcional/API-projeto-site/public/feed.html
+++ b/Site funcional/API-projeto-site/public/feed.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="funcoes.js"></script>
     <title>Comunidade</title>
 </head>
-<body onload="verificar_autenticacao()">
+<body>
 
     <div class="container">
         <header class="cabecalho">
