--- a/Site funcional/API-projeto-site/public/suporte.html
+++ b/Site funcional/API-projeto-site/public/suporte.html
@@ -72,6 +72,8 @@
             <button type="submit">Enviar</button>
           </div>
         </form>
+
+        <a href="./teste.html">teste</a>
       </section>
     </div>
   </body>
