Inserindo animes, séries, doramas e filmes

--- a/Site funcional/API-projeto-site/public/index.html
+++ b/Site funcional/API-projeto-site/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/login.css">
+    <link rel="stylesheet" href="./css/index.css">
     <script type="text/javascript" src="funcoes.js"></script>
     <title>Login</title>
 </head>
@@ -15,7 +15,7 @@
             <div class="sobre">
  
                 <div class="slogan">       
-                    <img src="./Img/1.png" class="rede-social" alt="">
+                    <img src="./Img/4.png" class="rede-social" alt="">
                     <p>A rede social para compartihar suas opniões <br> sobre seus programas de entretenimento.</p>
                 </div>
             </div>
