--- a/Site funcional/API-projeto-site/public/cadastro.html
+++ b/Site funcional/API-projeto-site/public/cadastro.html
@@ -42,12 +42,12 @@
                             <input type="password" name="ConfSenha" id="ConfSenha">
                         </fieldset>
 
-                        <input type="submit" id="btn_entrar" value="Cadastrar" class="btn-green">
+                        <input type="submit" id="btn_entrar" value="CADASTRAR" class="btn-green">
                     </div>
                 </form> 
                 <div class="cadastro">
                     <p>Já é cadastrado?</p>
-                    <button><a href="login.html">ENTRAR</a></button>
+                    <button><a href="index.html">ENTRAR</a></button>
                 </div> 
             </div>
             
