--- a/Site funcional/API-projeto-site/public/comunidade.html
+++ b/Site funcional/API-projeto-site/public/comunidade.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="funcoes.js"></script>
     <title>Comunidade</title>
 </head>
-<body>
+<body onload="verificar_autenticacao()">
 
     <div class="container">
         <header class="cabecalho">
@@ -21,7 +21,6 @@
                     <ul>
                         <li><a href="./feed.html"><i class="fas fa-home"></i>Feed</a></li>
                         <li><a href="./comunidade.html"><i class="fas fa-users"></i>Comunidades</a></li>
-                        <li><a href="./rankings.html"><i class="fas fa-trophy"></i>Rankings</a></li>
                     </ul>
                     <ul>
                         <li><a href="#" onclick="logoff()"><i class="fas fa-sign-out-alt"></i>Sair</a></li>
