--- a/Site funcional/API-projeto-site/public/suporte.html
+++ b/Site funcional/API-projeto-site/public/suporte.html
@@ -31,11 +31,6 @@
                 ><i class="fas fa-users"></i>Comunidades</a
               >
             </li>
-            <li>
-              <a href="./rankings.html"
-                ><i class="fas fa-trophy"></i>Rankings</a
-              >
-            </li>
           </ul>
           <ul>
             <li>
@@ -45,7 +40,7 @@
             </li>
           </ul>
         </nav>
-        <span class="span-suporte"><a href="./suporte.html">SUPORTE</a></span>
+        <span class="span-suporte"><a href="./suporte.html">CADASTRO</a> - <a href="./ocorrencias.html">LISTA</a></span>
       </header>
 
       <section class="suporte">
@@ -69,11 +64,11 @@
                 ></textarea>
               </fieldset>
             </div>
-            <button type="submit">Enviar</button>
+            <button type="submit">ENVIAR</button>
           </div>
-        </form>
-
-        <a href="./teste.html">teste</a>
+        </form>  
+        
+        
       </section>
     </div>
   </body>
